--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/i18n": "^4.12.8",
     "@vee-validate/rules": "^4.12.8",
+    "accept-language-parser": "^1.5.0",
     "bulma": "^1.0.1",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.29.5",
     "nuxt-auth-utils": "^0.0.25",
     "pinia": "^2.1.7",
+    "ua-parser-js": "^1.0.37",
     "vee-validate": "^4.12.8",
     "vue": "^3.4.27",
+    "vue-google-charts": "^1.1.0",
     "vue-router": "^4.3.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@nuxthub/core": "^0.5.18",
+    "@types/accept-language-parser": "^1.5.6",
+    "@types/ua-parser-js": "^0.7.39",
     "drizzle-kit": "^0.21.2",
-    "miniflare": "^3.20240512.0",
-    "nitro-cloudflare-dev": "^0.1.4",
     "nuxt": "^3.11.2",
     "prisma": "^5.14.0",
     "sass": "^1.77.2",
