--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "create_meta": "drizzle-kit generate --dialect sqlite --schema=./db/schema.ts"
+    "create_meta": "drizzle-kit generate"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -22,6 +22,7 @@
     "bulma": "^1.0.1",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.29.5",
+    "lodash": "^4.17.21",
     "nuxt-auth-utils": "^0.0.25",
     "pinia": "^2.1.7",
     "ua-parser-js": "^1.0.37",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@nuxthub/core": "^0.5.18",
     "@types/accept-language-parser": "^1.5.6",
+    "@types/lodash": "^4.17.4",
     "@types/ua-parser-js": "^0.7.39",
     "drizzle-kit": "^0.21.2",
     "nuxt": "^3.11.2",
