--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "bulma": "^1.0.1",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.29.5",
-    "linkedom": "^0.18.0",
-    "lodash": "^4.17.21",
+    "node-html-parser": "^6.1.13",
     "nuxt-auth-utils": "^0.0.25",
     "pinia": "^2.1.7",
     "ua-parser-js": "^1.0.37",
@@ -36,7 +35,7 @@
   "devDependencies": {
     "@nuxthub/core": "^0.5.18",
     "@types/accept-language-parser": "^1.5.6",
-    "@types/lodash": "^4.17.4",
+    "@types/jsdom": "^21.1.6",
     "@types/ua-parser-js": "^0.7.39",
     "drizzle-kit": "^0.21.2",
     "nuxt": "^3.11.2",
