--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "create_meta": "drizzle-kit generate"
+    "create_meta": "drizzle-kit generate",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -33,6 +35,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^0.3.13",
     "@nuxthub/core": "^0.5.18",
     "@types/accept-language-parser": "^1.5.6",
     "@types/jsdom": "^21.1.6",
