--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vee-validate/i18n": "^4.12.8",
     "@vee-validate/rules": "^4.12.8",
     "accept-language-parser": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "bulma": "^1.0.1",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.29.5",
@@ -38,6 +39,7 @@
     "@nuxt/eslint": "^0.3.13",
     "@nuxthub/core": "^0.5.18",
     "@types/accept-language-parser": "^1.5.6",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsdom": "^21.1.6",
     "@types/ua-parser-js": "^0.7.39",
     "drizzle-kit": "^0.21.2",
