--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/jsdom": "^21.1.6",
     "@types/ua-parser-js": "^0.7.39",
     "drizzle-kit": "^0.21.2",
-    "nuxt": "^3.12.3",
+    "nuxt": "npm:nuxt-nightly@latest",
     "nuxt-purgecss": "^2.0.0",
     "prisma": "^5.14.0",
     "sass": "^1.77.2",
