--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "build": "nuxt build --preset=cloudflare_module",
@@ -10,7 +11,8 @@
     "postinstall": "nuxt prepare",
     "create_meta": "drizzle-kit generate",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org molasses --project sh0rt-kr ./output && sentry-cli sourcemaps upload --org molasses --project sh0rt-kr ./output"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -18,6 +20,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@pinia/nuxt": "^0.5.1",
+    "@sentry/cli": "^2.33.0",
+    "@sentry/vue": "^8.20.0",
     "@vee-validate/i18n": "^4.13.2",
     "@vee-validate/rules": "^4.13.2",
     "accept-language-parser": "^1.5.0",
